[package]
name = "coldxt_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
sensehat = { path = "../sensehat/sensehat-1.1.0", features = ["led-matrix"] }
sensehat-screen = "0.2.6"
tint = "1.0"
notify = "6.1"
font8x8 = "0.2"
rppal = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
